@@ -20,6 +20,7 @@ Contents:
    blocks
    objc-gc
    type-wrapper
+   serializing
    metadata/index
    api/index
    dev/index
